<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.starter.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_tool_detail"
            app:destination="@id/navigation_tool_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.starter.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_post"
        android:name="com.example.starter.ui.post.PostFragment"
        android:label="@string/title_post"
        tools:layout="@layout/fragment_post" />

    <fragment
        android:id="@+id/navigation_listings"
        android:name="com.example.starter.ui.listings.ListingsFragment"
        android:label="@string/title_listings"
        tools:layout="@layout/fragment_listings" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.starter.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_tool_detail"
        android:name="com.example.starter.ui.tooldetail.ToolDetailFragment"
        android:label="Tool Details"
        tools:layout="@layout/fragment_tool_detail">
        <argument
            android:name="tool_id"
            app:argType="integer" />
    </fragment>
    
</navigation>